# HW-NAS-Bench-360

./: .gitignore  .requirements-py  .rsyncignore  README.md  pyproject.toml  requirements.txt
results/: dataset.parquet
scripts/: analyze.ipynb  api.py  stream_to_pi.py
scripts/jetson/: bench.py
scripts/pi/: bench.py  bench_energy.py  bench_pi5.py  convert.py  convert_pi.py  pi_daemon.py  remote_bench.py  run.py  verify.py
scripts/pixel/: bench.py  bench_pixel.py  check_latency_csv.py  convert.py  convert_pixel.py  verify_infer.py
scripts/tests/: sanity_convert.py  sanity_measure.py
scripts/usb/: convert.py  infer.py  verify.py
scripts/utils/: arch_iter.py  build_dataset.py  check_coverage.py  convert_utils.py  energy_stability.py  export_arch_accuracies.py  fill_energy_pi.py  join_accuracies.py  merge_pi_results_by_arch.py  model_utils.py  runner_utils.py  task_specs.py
